# aleaf

./: .gitignore  .gitmodules  README.md  settings.gradle
.github/workflows/: ci.yml
app/: build.gradle
app/src/androidTest/java/com/leaf/example/aleaf/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/leaf/example/aleaf/: MainActivity.kt  SimpleVpnService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/leaf-android/: .gitignore  Cargo.toml  build.sh
app/src/main/rust/leaf-android/src/: lib.rs
app/src/test/java/com/leaf/example/aleaf/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
